--- a/style/main_style.css
+++ b/style/main_style.css
@@ -246,6 +246,10 @@ span.text-content {
   opacity: 1;
 }
 
+.bottom-icon {
+  margin-top: 20px;
+}
+
 span.text-content span {
   display: table-cell;
   text-align: center;
